Stop eScience lab text overlapping menu. Fixes #57

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -54,6 +54,7 @@
 
     @include media-query($on-palm) {
         position: absolute;
+        z-index: 20;
         top: 28px;
         right: $spacing-unit / 2;
         background-color: lighten($header-background-color, 10%);
@@ -283,6 +284,8 @@ img.product-logo {
         padding: 0;
         float: left;
         position: absolute;
+        z-index: 10;
+        white-space: nowrap;
         @include media-query($on-laptop) {
             font-size: 60px;
             line-height: 200px;
